tests/ui/fail/init/duplicate-field.rs
l10n::init!({
    functions: {},
    functions: {}
});

fn main() {}
