tests/ui/fail/init/duplicate-field.stderr
error: duplicate `functions` field
 --> tests/ui/fail/init/duplicate-field.rs:3:5
  |
3 |     functions: {}
  |     ^^^^^^^^^
